<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bkg"
    android:fitsSystemWindows="true"
    android:clipToPadding="true">

    <TextView
        android:id="@+id/tv_auth_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/ll_container"
        android:layout_marginBottom="30dp"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/text_xs"
        android:text="@string/auth_tip"/>

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white_bkg"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/please_input_school_account"
                android:maxLength="11"
                android:maxLines="1"
                android:inputType="phone"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/text_s"
                android:tag="@{model->student.account}"
                android:background="@null"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|right"
                app:iiv_color="@color/text_gray"
                android:layout_marginRight="10dp"
                android:padding="2dp"
                app:iiv_icon="typ-delete"
                android:clickable="true"
                android:tag="@{model->student.deleteAccount;click->deleteAccount}"
                tools:visibility="visible"
                android:visibility="gone"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/et_phone"
            android:background="@color/line_gray"
            android:layout_margin="10dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/please_input_school_password"
                android:maxLength="11"
                android:maxLines="1"
                android:inputType="phone"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/text_s"
                android:tag="@{model->student.password}"
                android:background="@null"/>

            <com.mikepenz.iconics.view.IconicsImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical|right"
                app:iiv_color="@color/text_gray"
                android:layout_marginRight="10dp"
                android:padding="2dp"
                app:iiv_icon="typ-delete"
                android:clickable="true"
                android:tag="@{model->student.deletePassword;click->deletePassword}"
                tools:visibility="visible"
                android:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/btn_info"
        android:text="@string/auth"
        android:textColor="@color/text_white"
        android:gravity="center"
        android:textSize="@dimen/text_s"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:tag="@{click->auth;model->student.authState}"
        android:layout_below="@+id/ll_container"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/close_page"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textSize="@dimen/text_s"
        android:textColor="@color/text_info"
        android:tag="@{click->close}"/>
</RelativeLayout>
